2007-12-06 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 491: Printing functions now all have a file descriptor argument.
	* SVN 490: Replace all fprintf errors by logging. Some lowest level
	           errors using fprintf remain. Definitely needs testing on
		   other platforms than Linux. 2-3 more internal functions had
		   their dc1394_ prefix removed.
	* SVN 489: Retire dc1394_cleanup_iso_channel_and_bandwidth.
	* SVN 488: reserve dc1394_ prefix for exported functions.
	           channel/bandwidth functions still have the prefix since
		   we plan to export them soon.
        * SVN 487: - Applied a consistant naming scheme for all functions.
	           - Temporary (?) implementation of a DC1394_DEBUG
		     compiler flag
	
2007-12-05 David Moore  <dcm@acm.org>
	* SVN 486: Allow retries when reading config ROMs under linux to
		   deal with sluggish cameras.
	* SVN 485: fix broken _get_string functions, which weren't actually
		   returning any data.
	* SVN 484: clean up error handling in grab_gray_image

2007-12-04 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 483: add "-std=gnu99" to compiler options
	* SVN 482: add log.h.
	* SVN 481: Updated logging mechanism to auto-print __LINE__, __FILE__
	           and __FUNCTION__. log.h was re-created for that purpose.
	* SVN 480: Fix leftover DC1394_NO_FRAME in OSX (Josh Rooke-Ley)
	
2007-12-03 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 479: Error codes are now negative.
        * SVN 478: capture_dequeue returns success if no frame is available
	           in POLL mode, but the frame will be NULL.

2007-12-02 David Moore  <dcm@acm.org>
	* SVN 477: Move dc1394_capture_set_device_filename to linux-specific
	           header.
	* SVN 476: Remove volatile fields from the public dc1394camera_t
	* SVN 475: configure.in: fix automake error

2007-12-02 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 472-4: better error code returned by register access functions
	